--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "sequelize": "^6.19.0",
+    "sqlite3": "^5.0.6",
     "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "seed": "node ./database/seed.js",
+    "setup": "node ./database/setup.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
