--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.4",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.6",
     "uuid": "^8.3.2"
