--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "multer": "^1.4.4",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.6",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui": "^4.14.0",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
